<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WASSCE Quiz</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="designer">Powered by Assutech</string>
    <string name="welcome_title">WASSCE Quiz</string>
    <string name="mathematics">Mathematics</string>
    <string name="english_language">English Language</string>
    <string name="economics">Economics</string>
    <string name="history">History</string>
    <string name="biology">Biology</string>
    <string name="agriculture">Agriculture</string>
    <string name="government">Government</string>
    <string name="try_again">Try Again</string>
    <string name="preferences">Preferences</string>
    <string name="main_menu">Main Menu</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="year_sort">Latest year first</string>
    <string name="previous">&lt;&lt;</string>
    <string name="next">&gt;&gt;</string>
    <string name="developer">Designed and Developed by Ibn  Yusuf</string>

</resources>
