<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="60dp" 
        android:paddingBottom="60dp">

        <Button
            android:id="@+id/englishLanguage"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/english_language" />

        <Button
            android:id="@+id/mathematics"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/mathematics" />

        <Button
            android:id="@+id/government"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/government" />

        <Button
            android:id="@+id/history"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/history" />

        <Button
            android:id="@+id/biology"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/biology" />

        <Button
            android:id="@+id/economics"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/economics" />

        <Button
            android:id="@+id/agriculture"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/agriculture" />
    </LinearLayout>

</ScrollView>